# learning-notes

./: Book1.xlsx  CMakeLists.txt  README.md  azure-pipelines.yml  directory_structure.txt  run_coverage.sh  sensortemp.cpp  最終発表.txt
alarm/: alarm.cpp  alarm.h
pipelines/scripts/: ci_build.sh  ci_coverage.sh  ci_setup.sh  ci_test.sh
pipelines/templates/: unit_test.yml
service/: service.md
system_test/: memo.txt  system_test.md  system_test.yml
test/: test_alarm.cpp
発表関連/: Book1.xlsx  answer.md  outline.txt  overview.txt
